# SonatinaTag

./: .gitignore  Info.plist  Makefile.am  README  SonatinaTag.pc.in  config.h.in  configure.ac
SonatinaTag.xcodeproj/: project.pbxproj
Xcode/: Info.plist
Xcode/SonatinaTag.xcodeproj/: project.pbxproj
include/: Makefile.am
include/SonatinaTag/: Dictionary.h  Error.h  Makefile.am  Picture.h  SonatinaTag.h  basedefs.h  cdefs.h  queue.h
include/SonatinaTag/Tags/: APE.h  FLAC.h  ID3v1.h  ID3v2.h  ID3v2Frame.h  M4A.h  Makefile.am
samples/ape/: APETag.c
samples/flac/: FLACTag.c
samples/id3v2/: ID3v2Tag.c
samples/m4a/: M4ATag.c
src/: Makefile.am  STFile.h  STFile.m  STTag.h  STTagComment.h  STTagComment.m
src/ape/: APETag.c  Makefile.am
src/base/: Makefile.am  Tag.c  Tag.h
src/flac/: FLACVorbisComments.c  Makefile.am  STTagFLAC.h  STTagFLAC.m  STTagFLACPicture.h  STTagFLACPicture.m
src/id3v1/: ID3v1.c  Makefile.am  STTagID3v1.h  STTagID3v1.m
src/id3v2/: CommentFrame.c  Frame.c  Frame.h  GenericFrame.c  ID3v2.c  Makefile.am  PictureFrame.c  STTagID3v2.h  STTagID3v2.m  STTagID3v2CommentFrame.h  STTagID3v2CommentFrame.m  STTagID3v2Frame.h  STTagID3v2Frame.m  STTagID3v2PictureFrame.h  STTagID3v2PictureFrame.m  STTagID3v2TextFrame.h  STTagID3v2TextFrame.m  STTagID3v2URLFrame.h  STTagID3v2URLFrame.m  STTagID3v2UserTextFrame.h  STTagID3v2UserTextFrame.m  STTagID3v2UserURLFrame.h  STTagID3v2UserURLFrame.m  TextFrame.c  URLFrame.c  UserTextFrame.c  UserURLFrame.c
src/m4a/: M4A-iTunes.c  Makefile.am  STTagM4A.h  STTagM4A.m
src/utils/: Dictionary.c  Makefile.am  NSErrorExt.h  NSErrorExt.m  NSStringExt.h  NSStringExt.m  Picture.c
